@@ -58,13 +58,31 @@
     paper size problem. Use Well-Tempered screening if you want to
     enhance the image printing quality.&lt;p&gt;
 
+    Use the &lt;a
+    href="show_driver.cgi?driver=ljet4d"&gt;"ljet4d"&lt;/a&gt;
+    Ghostscript driver for Duplex (double-sided printing)
+    support.&lt;p&gt;
+
+    The PPDs from this site use an ugly Perl workaround to patch
+    Ghostscript's output data stream in order to make paper tray
+    selection work as the driver has a bug which breaks this
+    functionality. This &lt;a
+    href="http://www.openprinting.org/download/printing/ghostscript-pcl-patches/inputslot.patch"&gt;patch&lt;/a&gt;
+    for GPL Ghostscript 8.63 fixes the problem and allows to set the
+    input tray with the "-dMediaPosition=X" commmand line option for
+    Ghostscript. "X" is an integer number which depends on the printer
+    model and tray. For HP "0" is usually the printer default, "7"
+    automatic selection, "2" manual feed, "1" the upper, and "4" the
+    lower tray. Note that for PCL 6/XL these numbers are
+    different.&lt;p&gt;
+
     A good PCL 5e driver is &lt;a
     href="show_driver.cgi?driver=hpijs"&gt;HPIJS&lt;/a&gt; which is
     developed by HP to support their non-PostScript laser
     printers. &lt;a
-    href="show_driver.cgi?driver=gimp-print"&gt;Gimp-Print&lt;/a&gt;
+    href="show_driver.cgi?driver=gutenprint"&gt;Gutenprint&lt;/a&gt;
     supports even PCL 4, 5, and 5e so that it serves as an alternative
-    driver even for older printers. Gimp_print has many dithering
+    driver even for older printers. Gutenprint has many dithering
     algorithms to choose, but most are optimized for inkjets.&lt;p&gt;
 
     Note that many printers listed as supported by this driver also
@@ -96,7 +114,7 @@
    <id>printer/Generic-PCL_6_PCL_XL_Printer</id>
    <comments>
     <en>
-     Only up to 600 dpi.
+     Only up to 600 dpi, grayscale only.
     </en>
    </comments>
   </printer>
