@@ -26,6 +26,19 @@
     finding out that. He analyzed the output of the Windows driver,
     where he found this "magic" 8-byte sequence.&lt;p&gt;
 
+    The PPDs from this site use an ugly Perl workaround to patch
+    Ghostscript's output data stream in order to make paper tray
+    selection work as the driver has a bug which breaks this
+    functionality. This &lt;a
+    href="http://www.openprinting.org/download/printing/ghostscript-pxl-patches/inputslot.patch"&gt;patch&lt;/a&gt;
+    for GPL Ghostscript 8.63 fixes the problem and allows to set the
+    input tray with the "-dMediaPosition=X" commmand line option for
+    Ghostscript. "X" is an integer number which depends on the printer
+    model and tray. For HP "0" is usually the printer default, "1"
+    automatic selection, "2" manual feed, "4" the upper, and "5" the
+    lower tray. Note that for PCL 5/5e these numbers are
+    different.&lt;p&gt;
+
   </en>
  </comments>
  <printers>
