@@ -32,9 +32,31 @@
     for GPL Ghostscript 8.63 so that giving the PJL commands is not
     necessary any more.&lt;p&gt;
 
-    The patches are both committed to the Subversion of GPL
+    The PPDs from this site use an ugly Perl workaround to patch
+    Ghostscript's output data stream in order to make paper tray
+    selection work as the driver has a bug which breaks this
+    functionality. This &lt;a
+    href="http://www.openprinting.org/download/printing/ghostscript-pxl-patches/inputslot.patch"&gt;patch&lt;/a&gt;
+    for GPL Ghostscript 8.63 fixes the problem and allows to set the
+    input tray with the "-dMediaPosition=X" commmand line option for
+    Ghostscript. "X" is an integer number which depends on the printer
+    model and tray. For HP "0" is usually the printer default, "1"
+    automatic selection, "2" manual feed, "4" the upper, and "5" the
+    lower tray. Note that for PCL 5/5e these numbers are
+    different.&lt;p&gt;
+
+    GPL Ghostscript 8.63 comes with a CUPS filter ("pstopxl") and 2
+    PPD files for the "pxlmono" and "pxlcolor" drivers. Note that you
+    will need all the three patches mentioned here to make the options
+    in the PPD files actually work. With this &lt;a
+    href="http://www.openprinting.org/download/printing/ghostscript-cups-patches/pstopxl-pdf-input.patch"&gt;patch&lt;/a&gt;
+    the filter and the PPDs will be made ready for &lt;a
+    href="https://www.linuxfoundation.org/en/OpenPrinting/PDF_as_Standard_Print_Job_Format"&gt;PDF
+    input&lt;/a&gt;.&lt;p&gt;
+
+    The patches are all committed to the Subversion repository of GPL
     Ghostscript, so they are not needed any more in future
-    versions.&lt;p&gt;
+    versions (8.64 and later).&lt;p&gt;
 
   </en>
   </comments>
