@@ -1,3 +1,11 @@
+2008-11-26  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/laserjet.xml, driver/ljet2p.xml, driver/ljet3.xml,
+	  driver/ljet3d.xml, driver/ljet4.xml, driver/ljet4d.xml,
+	  driver/ljetplus.xml, driver/pxl1010.xml, driver/pxlcolor.xml,
+	  driver/pxlmono.xml: Added links to Ghostscript patches which
+	  fix the broken input tray selection functionality.
+
 2008-11-25  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-LaserJet_1100.xml, printer/HP-LaserJet_1100A.xml,
